# OpenRoomClimateModel

./: README.md  c.py  pyproject.toml
src/: open_room_climate.py
tests/: conftest.py  test_climate.py
